# bakery_sales_prediction

./: .gitignore  README.md  config.py  pyproject.toml  pyrightconfig.json  setup.py
0_DataPreparation/: Feiertage-SH.csv  README.md  __init__.py  analyse_correlations.py  analyse_umsatz.ipynb  analyse_umsatz.py  analyse_windjammer.ipynb  analyse_windjammer.py  check missing data_kiwo_csv.ipynb  check missing data_wetter_csv.ipynb  config.py  create_windjammer_csv.ipynb  create_windjammer_csv.py  data_preparation.ipynb  data_preparation.py  feature_engineering_todos.md  generate_calendar_files.py  linear_regression_umsatz.ipynb  linear_regression_umsatz.py  linear_regression_umsatz_v2.py  process_school_holidays.py  scripts_overview.md  umsatzdaten_gekuerzt.csv
0_DataPreparation/input/compiled_data/: Schulferientage-SH.csv  easter_saturday.csv  wettercode.csv  (+4 more)
1_DatasetCharacteristics/: README.md  feature_selection.ipynb  feature_selection.py  feature_selection_v3.py  feature_selection_v4.py  fourier_analysis.py  fourier_analysis_v2.py  special_events_barplot.py
1_DatasetCharacteristics/output/: correlation_matrix.csv  feature_selection_results_20241210_143707.txt  feature_statistics.csv
2_BaselineModel/: README.md  analyze_submission.py  evaluate_simple_model.ipynb  evaluate_simple_model.py  model_training.ipynb  model_training.py  simple_weekday_model.py  simple_weekday_model_group1.py  weekday_model_by_product.py
3_Model/: README.md
4_Presentation/: README.md  Umsatzvorhersage_Bäckerei_Präsentation (1).pptx
bakery_sales_prediction/: __init__.py  config.py
(+65 files in other folders)
